# nao_pose_controller

./: CMakeLists.txt  package.xml
include/nao_mocap/: nao_mocap_node.h
include/nao_pose_controller/: nao_pose_controller.h
launch/: nao_mocap.launch  nao_pose_controller.launch
src/: nao_mocap_node.cpp  nao_pose_controller.cpp  nao_pose_controller_node.cpp
